src/ui/pages/TalentsPage/components/Controls/components/RankSlider/RankSlider.module.css
.rankSliderRoot {
    display: flex;
    align-items: center;
    gap: 4px;
    
    font-family: ravenswatch;
    text-transform: uppercase;
    
    -webkit-tap-highlight-color: transparent;
}

.rankSliderRoot input {
    cursor: pointer;

    max-width: 130px;
}

@media (max-width: 400px) {
    .rankSliderRoot input {
        max-width: 80px;
    }
}

@media (max-width: 350px) {
    .rankSliderRoot input {
        max-width: 70px;
    }
}

